@@ -39,7 +39,8 @@
         // "StandardConfigurations": [               // new in v 0.4.0
         //     "osimis-web-viewer",
         //     "stone-webviewer",
-        //     "orthanc-explorer-2"
+        //     "orthanc-explorer-2",
+        //     "ohif"
         // ],
 
         //"UncheckedResources" : [],
