@@ -1,3 +1,8 @@
+Pending changes in the mainline
+===============================
+
+* Added missing parsing of /dicom-web/studies/.../instances
+
 2024-02-16 - v 0.7.0
 ====================
 
